--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
       <title>Biswarup Bhattacharjee</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
 
