--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
     <div class="profile">
       <img src="images/dp.png" alt="biswarup-img" height=250px width=250px>
       <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p>I am Biswarup Bhattacharjee,I am persueing <strong>B.TECH</strong> in <strong>UEMK</strong>,...Welcome to my page...</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="skill-img" src="images/computer.png" alt="computer-img">
-        <h3>Lorem & Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <h3>PROGRAMMING</h3>
+        <p>I know c,python,java and c++.I also know webdev and android dev.Computer programming is the process of designing and building an executable computer program to accomplish a specific computing result or to perform a specific task.</p>
       </div>
       <div class="skill-row">
         <img class="chilli-img" src="images/chillies.png" alt="chilli-img">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <h3>LIKING SPICY FOOD</h3>
+        <p>Humans evolved to like hot food and the Chili sensation they get when they eat spicy food gives them a feeling similar to eating hot food.So I like to eat <strong>spicy</strong> food.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>I have an account in <strong>Facebook</strong>,Instagram,Telegram,Whatsapp,<strong>github</strong>.</h3>
+      <p>If you want to know any other details of me so here below present my <strong>Facebook</strong> link and <strong>github</strong> link.</p>
       <a class="btn" href="mailto:bbiswa471@gmail.com">CONTACT ME</a>
     </div>
   </div>
